# acp

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_BOUNDARY.md  ENTERPRISE_SCOPE.md  README.md  SECURITY.md
acp-relay/: app.py  http_security.py  key_provider.py  pyproject.toml  routes.py  routing.py  storage.py  validation.py
acp-relay/tests/: test_amqp_fixtures.py  test_key_provider.py  test_store_forward.py  test_well_known_resolver.py
acp-sdk-go/: amqp_transport.go  constants.go  discovery.go  go.mod  go.sum  identity.go  mqtt_fixtures_test.go  options.go  overlay.go  overlay_framework.go  transport.go
acp-sdk-java/: README.md  pom.xml
acp-sdk-python/: pyproject.toml
acp-sdk-python/acp/: __init__.py  agent.py  amqp_transport.py  capabilities.py  discovery.py  http_security.py  identity.py  messages.py  overlay_framework.py  relay_client.py  transport.py  well_known.py
acp-sdk-python/acp_cli/: README.md  agent_commands.py  common.py  config_commands.py  discover_commands.py  identity_commands.py  main.py  message_commands.py  ops_commands.py  register_commands.py  relay_commands.py  transport_commands.py
acp-sdk-python/tests/: test_amqp_binding.py  test_amqp_fixtures.py  test_cli_phase1.py  test_cli_phase2.py  test_cli_phase3.py  test_cli_phase4.py  test_discovery_enterprise.py  test_enterprise_profile_compat.py  test_https_hardening.py  test_identity_document.py  test_key_provider.py  test_mqtt_binding.py  test_mqtt_fixtures.py  test_overlay_adapter.py  test_overlay_framework.py  test_transport_and_delivery.py  test_well_known_discovery.py  test_well_known_validation.py
acp-sdk-typescript/: package-lock.json  package.json  tsconfig.json
cli/: README.md  identity_commands.py  main.py  output.py  pyproject.toml
cli/acp_cli/: agent_commands.py  common.py  config_commands.py  discover_commands.py  identity_commands.py  main.py  message_commands.py  output.py  register_commands.py  relay_commands.py  transport_commands.py
demo/: README.md
demos/: .gitignore  README.md
docs/: 10_protocol-summary.md  11_acp_relay_architecture_decision_note.md  12_acp_relay_spec_addendum.md  13_acp_implementation_plan_option3.md  14_acp_java_client_codex_spec.md  15_acp_detailed_implementation_plan.md  16_acp_amqp_transport_binding_spec.md  17_acp_amqp_binding_codex_context.md  18_acp_amqp_interoperability_fixtures_freeze.md  19_acp_amqp_conformance_checklist.md  1_acp_codex_context_prompt.md  20_acp_demo_matrix_four_modes.md  21_acp_transport_binding_abstractions_freeze.md  22_acp_transport_binding_template.md  23_acp_mqtt_transport_binding_spec.md  24_acp_transport_invariants.md  25_acp_current_implementation_status.md  26_acp_transport_support_matrix.md  27_acp_demo_readiness_checklist.md  28_acp_quick_start.md  29_acp_one_page_protocol_overview.md  2_acp_codex_engineering_brief.md  30_acp_ecosystem_diagram.md  31_acp_economic_model.md  32_acp_cli_specification.md  33_acp_cli_codex_implementation_brief.md  34_acp_cli_command_surface.md  35_acp_demo_commands.md  (+52 more)
relay-dev/: README.md  amqp_binding.py  app.py  http_security.py  identity_security.py  key_provider.py  pyproject.toml  routes.py  routing.py  storage.py  test_crypto_helpers.py  validation.py
relay-dev/tests/: test_amqp_binding.py  test_amqp_fixtures.py  test_enterprise_boundary.py  test_https_mtls.py  test_identity_verification.py  test_logging.py  test_security_boundary.py  test_store_forward.py
sdks/go/: go.mod  (+28 more)
sdks/mojo/: MANIFEST.in  NOTICE  README.md  acp_sdk_mojo.py  pyproject.toml  python_bridge.py
sdks/mojo/examples/: README.md  send_basic.mojo
sdks/mojo/src/: acp_sdk_mojo.mojo
sdks/mojo/tests/: test_signature_strict_bridge.py
sdks/mojo/tests/conformance/: README.md
sdks/python/: MANIFEST.in  README.md  pyproject.toml
sdks/python/acp/: __init__.py  agent.py  amqp_transport.py  capabilities.py  crypto.py  discovery.py  http_security.py  identity.py  key_provider.py  messages.py  mqtt_transport.py  overlay.py  overlay_framework.py  relay_client.py  transport.py  transport_auth.py  well_known.py
sdks/python/acp_cli/: __init__.py  agent_commands.py  main.py
sdks/python/examples/: README.md
sdks/python/tests/: test_amqp_binding.py  test_cli_key_provider.py  test_cli_phase3.py  test_cli_phase4.py  test_crypto_roundtrip.py  test_discovery_security.py  test_mqtt_binding.py  test_overlay_adapter.py  test_overlay_framework.py  test_security_profile_compat.py  test_transport_and_delivery.py
sdks/python/tests/conformance/: README.md
sdks/rust/: Cargo.toml  README.md
sdks/rust/cli/: Cargo.toml  README.md
sdks/rust/cli/src/: main.rs
sdks/rust/examples/: README.md  overlay_http_client.rs
sdks/rust/src/: agent.rs  amqp_transport.rs  capabilities.rs  constants.rs  crypto.rs  discovery.rs  errors.rs  http_security.rs  identity.rs  json_support.rs  key_provider.rs  lib.rs  messages.rs  mqtt_transport.rs  options.rs  overlay.rs  overlay_framework.rs  transport.rs  transport_auth.rs  well_known.rs
sdks/rust/tests/: amqp_fixtures.rs  crypto_roundtrip.rs  enterprise_profile_compat.rs  key_provider_local.rs  mqtt_fixtures.rs  overlay_framework.rs  security_profile_compat.rs  signature_strict_interop.rs  well_known_fixtures.rs  well_known_validation.rs
sdks/rust/tests/conformance/: README.md
tools/poker-demo/rust-player/: Cargo.toml  Dockerfile  README.md
tools/poker-demo/rust-player/src/: main.rs
tools/python-chess-player/: Dockerfile  README.md  docker-compose-relay.yaml  docker-compose.yml  pyproject.toml
tools/python-chess-player/.chess-agent/acp/: discovery_cache.json
tools/python-chess-player/.chess-agent/acp/agent_player1_localhost_8088/: identity.json  identity_document.json
tools/python-chess-player/app/: __init__.py  acp_client.py  config.py  engine.py  main.py  models.py  openai_client.py  orchestrator.py  payload_codec.py  pgn_exporter.py  state_store.py
tools/python-chess-player/app/static/: app.js  style.css
tools/python-chess-player/app/templates/: index.html
tools/python-chess-player/tests/: conftest.py  test_engine.py  test_orchestrator.py  test_payload_codec.py
(+388 files in other folders)
