[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-relay"
version = "0.1.0"
description = "Reference HTTP relay for the Agent Communication Protocol (ACP)"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "requests>=2.31.0",
]

[tool.setuptools]
py-modules = ["app", "routes", "routing", "storage", "validation"]
