[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acpctl"
version = "0.1.1"
description = "Command line interface for the Agent Communication Protocol (ACP)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "ACP Contributors" },
]
keywords = ["acp", "cli", "agent communication protocol", "ai agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Topic :: Utilities",
]
dependencies = [
  "acp-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0.0",
  "twine>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/beltxa/acp"
Repository = "https://github.com/beltxa/acp"
Issues = "https://github.com/beltxa/acp/issues"

[project.scripts]
acp = "acp_cli.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["acp_cli", "acp_cli.*"]
