[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-relay"
version = "0.1.0"
description = "Reference HTTP relay for the Agent Communication Protocol (ACP)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "cryptography>=42.0.0",
  "fastapi>=0.112.0",
  "pika>=1.3.2",
  "uvicorn>=0.30.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
py-modules = [
  "amqp_binding",
  "app",
  "http_security",
  "identity_security",
  "key_provider",
  "routes",
  "routing",
  "storage",
  "validation",
]
