[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-runtime"
version = "0.1.2"
description = "ACP (Agent Communication Protocol) runtime for building secure, interoperable AI agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "ACP Contributors" },
]
keywords = ["acp", "agent communication protocol", "ai agents", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Communications",
]
dependencies = [
  "cryptography>=42.0.0",
  "paho-mqtt>=2.1.0",
  "pika>=1.3.2",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "flask>=3.0.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "twine>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/beltxa/acp"
Repository = "https://github.com/beltxa/acp"
Issues = "https://github.com/beltxa/acp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["acp", "acp.*"]
