[package]
name = "acp-sdk-rust"
version = "0.1.0"
edition = "2024"
description = "ACP Rust SDK (internal)"
license = "UNLICENSED"
publish = false

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde", "clock"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
hkdf = "0.12.4"
lapin = { version = "2.5.0", default-features = false, features = ["rustls"] }
rand = "0.8.5"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "blocking", "rustls-tls"] }
rumqttc = "0.25.0"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
httpmock = "0.8.2"
tempfile = "3.23.0"
