[package]
name = "poker-demo-rust-player"
version = "0.1.0"
edition = "2021"

[dependencies]
acp-runtime = { path = "../../../sdks/rust" }
chrono = { version = "0.4.42", features = ["clock"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tiny_http = "0.12.0"
